<resources>
    <string name="app_name">Veritrans SDK Sample</string>
    <string name="buy">Buy</string>
    <string name="btn_get_token">Get Authentication Token</string>
    <string name="register">Register</string>
    <string name="buy_with_core">Use Core flow</string>
    <string name="buy_with_ui">Use UI flow</string>
    <string name="buy_with_credit_card">Buy using credit card</string>
    <string name="buy_with_permata_va">Buy using Permata VA</string>
    <string name="buy_with_mandiri_bill">Buy using Mandiri Bill</string>
    <string name="buy_with_bca_va">Buy using BCA VA</string>
    <string name="buy_with_mandiri_click">Buy using Mandiri Click</string>
    <string name="buy_with_cimbc_click">Buy using CIMB Click</string>
    <string name="buy_with_indomaret">Buy using Indomaret</string>
    <string name="buy_with_mandiri_e_cash">Buy using Mandiri E-Cash</string>
    <string name="buy_with_bca_klik">Buy using BCA KlikPay</string>
    <string name="activity_title_credit_card">Pay with Credit/Debit Card</string>
    <string name="activity_title_permata_va">Pay with Bank Transfer</string>
    <string name="activity_title_mandiri_bill">Pay with Mandiri Bill</string>
    <string name="activity_title_bca">Pay with BCA</string>
    <string name="activity_title_mandiri_click">Pay with Mandiri Click</string>
    <string name="activity_title_cimb_click">Pay with CIMB Click</string>
    <string name="activity_title_indomaret">Pay with Indomaret</string>
    <string name="activity_title_mandiri_cash">Pay with Mandiri E-Cash</string>
    <string name="activity_title_bca_klik">Pay with BCA KlikPay</string>
    <string name="activity_title_card_registration">Register Credit Card</string>
    <string name="authentication_token_format">Authentication Token: %s</string>

    <string name="card_click_normal">Normal</string>
    <string name="card_click_two_click">Two Click</string>
    <string name="card_click_one_click">One Click</string>
</resources>
